--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server --content-base dist"
+    "dev": "webpack-dev-server --content-base dist --hot"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,10 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
     "html-webpack-plugin": "^3.0.6",
+    "style-loader": "^0.20.3",
     "webpack": "^3.11.0",
     "webpack-cli": "^2.0.10"
   },
