--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack-dev-server --content-base dist --hot"
+    "dev": "NODE_ENV=development webpack-dev-server --content-base dist --hot",
+    "lint": "eslint ./src --ext .js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,11 @@
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
+    "eslint-loader": "^2.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.0.6",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^3.11.0",
     "webpack-cli": "^2.0.10"
