--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development webpack-dev-server --content-base dist --hot",
+    "dev": "SET NODE_ENV=development & webpack-dev-server --content-base dist --hot",
     "lint": "eslint ./src --ext .js"
   },
   "repository": {
@@ -25,6 +25,7 @@
     "eslint": "^4.18.2",
     "eslint-loader": "^2.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
