--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "SET NODE_ENV=development & webpack-dev-server --content-base dist --hot",
-    "lint": "eslint ./src --ext .js"
+    "lint": "eslint ./src --ext .js",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "eslint": "^4.18.2",
     "eslint-loader": "^2.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
